--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.6",
-    "morgan": "^1.10.0",
     "morgan-body": "^2.6.5",
-    "rotating-file-stream": "^2.1.4"
+    "socket.io": "^3.1.1"
   },
   "scripts": {
     "start": "node index.js",
