--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
     "http-proxy-middleware": "^1.0.6",
-    "morgan-body": "^2.6.5",
     "socket.io": "^3.1.1"
   },
   "scripts": {
