--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,3 @@
 MONITOR_AUTH_KEY=qnDuEG6VBqFuqwJ
 PORT=3000
-# TARGETS
-OMS_TARGET_URL=https://some-url.com
-WAREHOUSE_TARGET_URL=https://some-url.com
+HOST=localhost
